Changed text sizes for mobile and desktop screen, fixed spacing. Added sticky Do and Don’t headers to mobile version (refresh when changing size).

--- a/css/skeleton-SC.css
+++ b/css/skeleton-SC.css
@@ -10,6 +10,7 @@
 
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
+- Added by SC
 - Grid
 - Base Styles
 - Typography
@@ -25,10 +26,10 @@
 - Media Queries
 */
 
-/* SC added code
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* Added by SC
+–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-/* poster colours -------------------------------*/
+/* poster colours -------------------------------------------*/
 
 /*main*/
 .mainColour {background-color: #EDE2D0;}
@@ -39,13 +40,44 @@
 /*borders*/
 .borderColour {border-color: #F47738;}
 
-/* for smallest devices ------------------------*/
+/* for smallest devices -------------------------------------*/
 
-.doDontHeader{
+.placeholder {
+  height: 50px;
+}
+.doHeader{
   text-align: center;
   border-style: solid;
   border-width: 2px 0 2px 0;
-  padding: 1rem;
+  padding: 2%;
+  z-index: 1;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-property: background-color;
+  -moz-transition-duration: 0.2s;
+  -o-transition-property: background-color;
+  -o-transition-duration: 0.2s;
+}
+.doHeader.fixed {
+     background-color: #F38348;
+     color: #FFFFFF;
+     top: 0;
+     position: fixed;
+     width: 96%;
+     z-index: 0;
+     transition-property: background-color;
+     transition-duration: 0.2s;
+     -webkit-transition-property: background-color;
+     -webkit-transition-duration: 0.2s;
+     -moz-transition-property: background-color;
+     -moz-transition-duration: 0.2s;
+     -o-transition-property: background-color;
+     -o-transition-duration: 0.2s;
+  }
+.doHeader.fixed.absolute {
+    position: absolute;
 }
 
 img {
@@ -53,41 +85,70 @@ img {
   max-height: 20rem;
 }
 
-  /* Individual guidance box */
-
-.flexParent {
-  height: 190px;
-  margin: 10px 10px 10px 10px;
-  display: flex;
-  flex-flow: column;
-}
-.flexChild {
-  margin: auto;
-}
-img.flexChild {
-  max-width: 20rem;
-  max-height: 8rem;
-  padding: 1.1rem 0 0 0;
-}
-
-  /* Poster title */
+/* Sizing for page title */
 
 .titleFlexParent {
   display: flex;
-  flex-flow: row;
+  margin: 1.8rem 0 1.8rem 0;
 }
   .titleFlexChild {
-    margin: 1.5rem 2rem 0 2rem;
-    flex: 0 60%;
+    margin: 0 2rem 0 2rem;
   }
   h1.titleFlexChild {
-    flex: 0 100%;
+    /*flex: 0 100%;*/
   }
   img.titleFlexChild{
     max-width: 10rem;
     max-height: 7.6rem;
-    margin: 1.8rem;
-    flex:0;
+    /*margin: 1.8rem;*/
+    flex:0;*/
+  }
+
+/* Sizing for individual guidance box */
+
+  .flexParent {
+    height: 150px;
+    margin: 10px 10px 10px 10px;
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+  }
+  .flexChild {
+    margin: auto;
+  }
+  img.flexChild {
+    max-width: 20rem;
+    max-height: 8rem;
+    /*padding: 2.3rem 0 2.3rem 0;*/
+  }
+  /*a.flexChild {
+    padding: 0 0 1.1rem;
+  }*/
+
+/* for larger devices -----------------------------------*/
+
+@media (min-width: 400px) {
+  .titleFlexParent {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 3.5rem 0 3.5rem 0;
+    }
+  h1.titleFlexChild {
+    flex: 0 60%;
+    }
+  img.titleFlexChild {
+      max-width: 270rem;
+      max-height: 10rem;
+      flex:0;
+    }
+    .doHeader{
+      text-align: center;
+      border-style: solid;
+      border-width: 2px 0 2px 0;
+      padding: 2%;
+    }
   }
 
 /* Grid
@@ -120,7 +181,7 @@ img.flexChild {
     width: 100%; } /* SC edited from 80% to 100% */
   .column,
   .columns {
-    /* margin-left: 4%; SC commented out */
+    /*margin-left: 4%; SC commented out */
   }
   .column:first-child,
   .columns:first-child {
@@ -132,7 +193,7 @@ img.flexChild {
   .three.columns                  { width: 22%;            }
   .four.columns                   { width: 30.6666666667%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
+  .six.columns                    { width: 50%;            }
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -203,7 +264,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 0 0;
   font-weight: 500; }
 h1 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.1rem;}
-h2 { font-size: 2.8rem; line-height: 1.35; letter-spacing: -.1rem; } /* SC edited */
+h2 { font-size: 1.9rem; line-height: 1.35; letter-spacing: -.1rem; } /* SC edited */
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
@@ -211,8 +272,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
+  h1 { font-size: 4.0rem; }
+  h2 { font-size: 2.7rem; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
